Mon Mar 28 22:46:23 CEST 2005  Jochen Eisinger <jochen@penguin-breeder.org>

	* Make public key in getkey reply mandatory.  Affected file
	  lib/silcclient/command_reply.c

Sun Mar 27 19:03:31 CEST 2005  Patrik Weiskircher <pat@icore.at>

	* Added Parameter dont_register_crypto_library to
	  SilcClientParam. If set to TRUE, silcclient library will
	  not initalize the Crypto Libraries and application
	  will need to do it. Affected file lib/silcclient/silcclient.h,
          lib/silcclient/client.c.

Sun Mar 27 19:02:48 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Imported new silc_utf8_[encode|decode] routines from
	  my internal SILC 1.1 source tree.  New encodings added:
	  SILC_STRING_LOCALE (SILC_STRING_LANGUAGE is deprecated),
	  SILC_STRING_UTF8, SILC_STRING_PRINTABLE, SILC_STRING_VISIBLE,
	  SILC_STRING_TELETEX, SILC_STRING_NUMERICAL and
	  SILC_STRING_LDAP_DN.

	* Splitted UTF-8 routines into lib/silcutil/silcutf8.[ch].

	* Implemented stringprep (RFC 3454) API.  Internally we use
	  GNU Libidn's stringprep, for now, so it is required now to
	  compile SILC sources.  Added lib/silcutil/silcstringprep.[ch].

	* Added checking for GNU Libidn and --with-libidn to configure.

Wed Mar 23 11:20:33 CET 2005  Jochen Eisinger <jochen@penguin-breeder.org>

	* If the passphrases entered do not match while generating a new key,
	  completly start over instead of going into an infinite loop asking
	  the user to re-enter the passphrase correctly.  Affected file
	  lib/silcutil/silcapputil.c

Sun Jan  9 14:28:51 CET 2005  Pekka Riikonen <priikone@silcnet.org>

	* Make sure server is removed from backup list when it is
	  deleted.  Affected files silcd/command.c, server.c,
	  server_util.c.

	* Close socket when connecting to router fails.  Affected
	  file silcd/server.c.

Tue Jan  4 13:06:26 CET 2005  Jochen Eisinger <jochen@penguin-breeder.org>

	* Adopt configuration toolchain to current auto-tools.
	  Affected files prepare, irssi/configure.in