@@ -1,3 +1,10 @@
+Tue Mar 29 00:45:11 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed SILC_STRING_LDAP_DN encoding and decoding.  Affected
+	  file lib/silcutil/silcutf8.c.
+
+	* Added SILC_STRING_UTF8_ESCAPE to lib/silcutil/silcstrutil.h.
+
 Mon Mar 28 22:46:23 CEST 2005  Jochen Eisinger <jochen@penguin-breeder.org>
 
 	* Make public key in getkey reply mandatory.  Affected file
